; ModuleID = '/home/carl/AnghaBench/mjolnir/Mjolnir/lua/extr_lcorolib.c_luaB_cocreate.c'
source_filename = "/home/carl/AnghaBench/mjolnir/Mjolnir/lua/extr_lcorolib.c_luaB_cocreate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LUA_TFUNCTION = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @luaB_cocreate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @luaB_cocreate(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = load i32, i32* @LUA_TFUNCTION, align 4
  %6 = call i32 @luaL_checktype(i32* %4, i32 1, i32 %5)
  %7 = load i32*, i32** %2, align 8
  %8 = call i32* @lua_newthread(i32* %7)
  store i32* %8, i32** %3, align 8
  %9 = load i32*, i32** %2, align 8
  %10 = call i32 @lua_pushvalue(i32* %9, i32 1)
  %11 = load i32*, i32** %2, align 8
  %12 = load i32*, i32** %3, align 8
  %13 = call i32 @lua_xmove(i32* %11, i32* %12, i32 1)
  ret i32 1
}

declare dso_local i32 @luaL_checktype(i32*, i32, i32) #1

declare dso_local i32* @lua_newthread(i32*) #1

declare dso_local i32 @lua_pushvalue(i32*, i32) #1

declare dso_local i32 @lua_xmove(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
